--- a/Endorsement.vbproj
+++ b/Endorsement.vbproj
@@ -136,6 +136,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>DSStation.xsd</DependentUpon>
     </Compile>
+    <Compile Include="DSTS.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DSTS.xsd</DependentUpon>
+    </Compile>
     <Compile Include="FrmMain.vb">
       <SubType>Form</SubType>
     </Compile>
@@ -215,6 +220,17 @@
     </None>
     <None Include="DSStation.xss">
       <DependentUpon>DSStation.xsd</DependentUpon>
+    </None>
+    <None Include="DSTS.xsc">
+      <DependentUpon>DSTS.xsd</DependentUpon>
+    </None>
+    <None Include="DSTS.xsd">
+      <SubType>Designer</SubType>
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DSTS.Designer.vb</LastGenOutput>
+    </None>
+    <None Include="DSTS.xss">
+      <DependentUpon>DSTS.xsd</DependentUpon>
     </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
